<resources>
    <string name="app_name">DeskDeliveryByHungerBox</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
	<string name="Order">Order</string>
    <string name="DeskDelivery">Desk Delivery</string>
    <string name="Recharge">Recharge</string>
    <string name="deskDelivery_requests">Delivery Requests</string>
    <string name="deskDelivery_volunteer">Delivery Volunteers</string>
    <string name="deskDelivery_myMatch">My Matches</string>
    <string name="deskDelivery_myProfile">My Profile</string>
    <string name="RateUs">Rate Us</string>
    <string name="ContactUs">Contact us</string>
    <string-array name="food_items">
        <item>Paneer Makhani</item>
        <item>Dal Tadka</item>
        <item>Jeera Rice</item>
        <item>Tandoori Roti</item>
        <item>Naan</item>
        <item>Makhani Saag</item>
        <item>Toor Dal</item>
    </string-array>
</resources>
